--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,61 @@
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.0
-certifi==2019.11.28
-cffi==1.13.2
+asgiref==3.2.3
+asn1crypto==1.2.0
+beautifulsoup4==4.8.2
+blis==0.4.1
+Bottleneck==1.3.1
+catalogue==1.0.0
+certifi==2019.9.11
+cffi==1.13.0
+chardet==3.0.4
 Click==7.0
+conda==4.7.12
+conda-package-handling==1.6.0
+cryptography==2.8
 cycler==0.10.0
-decorator==4.4.1
-defusedxml==0.6.0
-entrypoints==0.3
+cymem==2.0.3
+Django==3.0.4
+fastai==1.0.60
+fastprogress==0.2.2
 Flask==1.1.1
+idna==2.8
 importlib-metadata==1.5.0
-inflect==4.1.0
-ipydatawidgets==4.0.1
-ipykernel==5.1.4
-ipyscales==0.3.0
-ipython==7.12.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 itsdangerous==1.1.0
-jaraco.itertools==5.0.0
-jedi==0.16.0
 Jinja2==2.11.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
-jupyter-core==4.6.1
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
-mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-more-itertools==8.2.0
-nbconvert==5.6.1
-nbformat==5.0.4
-notebook==6.0.3
+murmurhash==1.0.2
+numexpr==2.7.1
 numpy==1.18.1
+nvidia-ml-py3==7.352.0
+opencv-python==4.2.0.32
+packaging==20.1
 pandas==1.0.1
-pandocfilters==1.4.2
-parso==0.6.0
-pexpect==4.8.0
-pickleshare==0.7.5
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
-ptyprocess==0.6.0
+Pillow==7.0.0
+plac==1.1.3
+preshed==3.0.2
+pycosat==0.6.3
 pycparser==2.19
-Pygments==2.5.2
-pyntcloud==0.1.2
+pyOpenSSL==19.0.0
 pyparsing==2.4.6
-pyrsistent==0.15.7
+PySocks==1.7.1
 python-dateutil==2.8.1
-pythreejs==2.1.1
 pytz==2019.3
-pyzmq==18.1.1
-qtconsole==4.6.0
+PyYAML==5.3
+requests==2.22.0
+ruamel-yaml==0.15.46
 scipy==1.4.1
-Send2Trash==1.5.0
-six==1.14.0
-terminado==0.8.3
-testpath==0.4.4
-torch==1.3.1
-tornado==6.0.3
-traitlets==4.3.3
-traittypes==0.2.1
-wcwidth==0.1.8
-webencodings==0.5.1
-Werkzeug==0.16.1
-widgetsnbextension==3.5.1
-zipp==2.1.0
+six==1.12.0
+soupsieve==1.9.5
+spacy==2.2.3
+sqlparse==0.3.1
+srsly==1.0.1
+thinc==7.3.1
+torch==1.4.0
+torchvision==0.5.0
+tqdm==4.36.1
+urllib3==1.24.2
+wasabi==0.6.0
+Werkzeug==1.0.0
+whitenoise==5.0.1
+zipp==2.2.0
