--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ certifi==2019.9.11
 cffi==1.13.0
 chardet==3.0.4
 Click==7.0
-conda==4.3.16
 cryptography==2.8
 cycler==0.10.0
 cymem==2.0.3
@@ -40,6 +39,7 @@ inflect==4.1.0
 ipydatawidgets==4.0.1
 ipykernel==5.1.4
 ipyscales==0.3.0
+ipython==7.13.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 itsdangerous==1.1.0
@@ -58,8 +58,6 @@ Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
 mkl-service==2.3.0
 more-itertools==8.2.0
 murmurhash==1.0.2
@@ -77,7 +75,7 @@ open3d==0.9.0.0
 opencv-python==4.2.0.32
 opt-einsum==3.2.0
 packaging==20.1
-pandas==1.0.1
+pandas==1.0.2
 pandocfilters==1.4.2
 parso==0.6.0
 pexpect==4.8.0
@@ -113,7 +111,7 @@ rsa==4.0
 ruamel.yaml==0.15.46
 scipy==1.4.1
 Send2Trash==1.5.0
-six==1.12.0
+six==1.14.0
 soupsieve==1.9.5
 spacy==2.2.3
 sqlparse==0.3.1
@@ -140,4 +138,4 @@ Werkzeug==1.0.0
 whitenoise==5.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.0
-zipp==2.2.0
+zipp==3.1.0
