--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
-mkl-service==2.3.0
+mkl
 more-itertools==8.2.0
 murmurhash==1.0.2
 nbconvert==5.6.1
