--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ backcall==0.1.0
 beautifulsoup4==4.8.2
 bleach==3.1.0
 blis==0.4.1
-Bottleneck==1.3.1
 cachetools==4.0.0
 catalogue==1.0.0
 certifi==2019.9.11
@@ -49,14 +48,9 @@ Jinja2==2.11.1
 jsonpatch==1.25
 jsonpointer==2.0
 jsonschema==3.2.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
-jupyter-core==4.6.1
-Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
-matplotlib==3.1.3
 mistune==0.8.4
 mkl
 more-itertools==8.2.0
@@ -64,14 +58,11 @@ murmurhash==1.0.2
 nbconvert==5.6.1
 nbformat==5.0.4
 networkx==2.4
-neuralnet-pytorch==0.0.3
 nose==1.3.7
 notebook==6.0.3
 numexpr==2.7.1
-numpy==1.18.1
 nvidia-ml-py3==7.352.0
 oauthlib==3.1.0
-open3d==0.9.0.0
 opencv-python==4.2.0.32
 opt-einsum==3.2.0
 packaging==20.1
@@ -83,11 +74,10 @@ pickleshare==0.7.5
 Pillow==7.0.0
 plac==1.1.3
 plyfile==0.7.1
-pointnet2==0.0.0
 preshed==3.0.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.3
-protobuf==3.11.4
+protobuf
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -101,14 +91,11 @@ pyparsing==2.4.6
 pyrsistent==0.15.7
 PySocks==1.7.1
 python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3
 pyzmq==18.1.1
 qtconsole==4.6.0
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
-ruamel.yaml==0.15.46
 scipy==1.4.1
 Send2Trash==1.5.0
 six==1.14.0
@@ -116,15 +103,13 @@ soupsieve==1.9.5
 spacy==2.2.3
 sqlparse==0.3.1
 srsly==1.0.1
+tensorboardx
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 thinc==7.3.1
-torch==1.4.0
 torchfile==0.1.0
-torchvision==0.5.0
 tornado==6.0.3
-tqdm==4.36.1
 traitlets==4.3.3
 traittypes==0.2.1
 trimesh==3.6.1
@@ -135,7 +120,6 @@ wcwidth==0.1.8
 webencodings==0.5.1
 websocket-client==0.57.0
 Werkzeug==1.0.0
-whitenoise==5.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.0
 zipp==3.1.0
